--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,25 +2,41 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/doctor_appointment_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=admin
+
+# HikariCP Configuration (Connection Pool)
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.pool-name=HikariCP-Hospital
+spring.datasource.hikari.max-lifetime=1200000
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.validation-timeout=5000
+spring.datasource.hikari.leak-detection-threshold=60000
+spring.datasource.hikari.initialization-fail-timeout=1
+spring.datasource.hikari.isolate-internal-queries=false
+spring.datasource.hikari.allow-pool-suspension=false
+spring.datasource.hikari.read-only=false
+spring.datasource.hikari.register-mbeans=false
+spring.datasource.hikari.catalog=doctor_appointment_db
+spring.datasource.hikari.connection-init-sql=SELECT 1
+spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.transaction-isolation=TRANSACTION_READ_COMMITTED
+spring.datasource.hikari.auto-commit=true
+spring.datasource.hikari.keepalive-time=0
+
+# JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.batch_size=20
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
 
 # Redis Configuration (disabled)
 #spring.redis.host=localhost
 #spring.redis.port=6379
-
-# Swagger Configuration
-springdoc.api-docs.path=/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
-springdoc.api-docs.enabled=true
-springdoc.swagger-ui.enabled=true
-springdoc.packages-to-scan=com.example.controller
-springdoc.swagger-ui.operationsSorter=method
-springdoc.swagger-ui.tagsSorter=alpha
-springdoc.swagger-ui.doc-expansion=none
-springdoc.writer-with-default-pretty-printer=true
 
 # Logging Configuration
 logging.level.root=INFO
