Fix: add duplicate department

--- a/src/main/resources/error-messages.properties
+++ b/src/main/resources/error-messages.properties
@@ -8,6 +8,11 @@ error.appointment.conflict.code=409001
 error.appointment.conflict.title=Conflict
 error.appointment.conflict.detail=The appointment conflicts with an existing appointment
 
+# Duplicate Resource Errors (409)
+error.duplicate.resource.code=409003
+error.duplicate.resource.title=Duplicate Resource
+error.duplicate.resource.detail=A resource with the same identifier already exists
+
 # Validation Errors (400)
 error.validation.code=400001
 error.validation.title=Validation Error
