--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,7 +55,7 @@ spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${SMTP_USERNAME:jagadeesan11@gmail.com}
 
-spring.mail.password=${SMTP_PASSWORD:xxxxxxxxx}
+spring.mail.password=${SMTP_PASSWORD:nakd pfmk iyji zkxr}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
